--- a/src/main/resources/i18n/errors.properties
+++ b/src/main/resources/i18n/errors.properties
@@ -1,7 +1,11 @@
 # Base error code
-error.clubServer.baseError = 1000
+error.club.server.baseError = 1000
 
 # Error messages
 error.duplicatedClubAcronym.code = 1001
 error.duplicatedClubAcronym.message = The acronym {0} is in use by another club.
 error.duplicatedClubAcronym.developerInfo = The selected acronym is in use by another club. The acronym must be unique in the application.
+
+error.clubNotFound.code = 1002
+error.clubNotFound.message = There is no club with id={0}.
+error.clubNotFound.developerInfo = The selected club does not exist.
