--- a/src/main/resources/i18n/errors.properties
+++ b/src/main/resources/i18n/errors.properties
@@ -2,10 +2,16 @@
 error.club.server.baseError = 1000
 
 # Error messages
-error.duplicatedClubAcronym.code = 1001
-error.duplicatedClubAcronym.message = The acronym {0} is in use by another club.
-error.duplicatedClubAcronym.developerInfo = The selected acronym is in use by another club. The acronym must be unique in the application.
+error.duplicatedProperty.club.acronym.code = 1001
+error.duplicatedProperty.club.acronym.message = The acronym {0} is in use by another club.
+error.duplicatedProperty.club.acronym.developerInfo = The selected acronym is in use by another club. The acronym must be unique in the application.
 
-error.clubNotFound.code = 1002
-error.clubNotFound.message = There is no club with id={0}.
-error.clubNotFound.developerInfo = The selected club does not exist.
+error.entityNotFound.club.id.code = 1002
+error.entityNotFound.club.id.message = There is no club with id={0}.
+error.entityNotFound.club.id.developerInfo = The selected club does not exist.
+
+error.entityNotFound.club.acronym.code = 1003
+error.entityNotFound.club.acronym.message = There is no club with acronym={0}.
+error.entityNotFound.club.acronym.developerInfo = The selected club does not exist.
+
+
