Added user entity.
Added CRUD infrastructure.

--- a/src/main/resources/i18n/errors.properties
+++ b/src/main/resources/i18n/errors.properties
@@ -8,10 +8,21 @@ error.duplicatedProperty.club.acronym.developerInfo = The selected acronym is in
 
 error.entityNotFound.club.id.code = 1002
 error.entityNotFound.club.id.message = There is no club with id={0}.
-error.entityNotFound.club.id.developerInfo = The selected club does not exist.
+error.entityNotFound.club.id.developerInfo = The requested club does not exist.
 
 error.entityNotFound.club.acronym.code = 1003
 error.entityNotFound.club.acronym.message = There is no club with acronym={0}.
-error.entityNotFound.club.acronym.developerInfo = The selected club does not exist.
+error.entityNotFound.club.acronym.developerInfo = The requested club does not exist.
 
+error.entityNotFound.user.id.code = 1004
+error.entityNotFound.user.id.message = There is no user with id={0}.
+error.entityNotFound.user.id.developerInfo = The requested user does not exist.
+
+error.entityNotFound.user.email.code = 1005
+error.entityNotFound.user.email.message = There is no user with email={0}.
+error.entityNotFound.user.email.developerInfo = The requested user does not exist.
+
+error.duplicatedProperty.user.email.code = 1006
+error.duplicatedProperty.user.email.message = The email {0} is in use by another user.
+error.duplicatedProperty.user.email.developerInfo = The selected email is in use by another user. The email must be unique in the application.
 
