Implemented Player functionality.

--- a/src/main/resources/i18n/errors.properties
+++ b/src/main/resources/i18n/errors.properties
@@ -26,3 +26,11 @@ error.duplicatedProperty.user.email.code = 1006
 error.duplicatedProperty.user.email.message = The email {0} is in use by another user.
 error.duplicatedProperty.user.email.developerInfo = The selected email is in use by another user. The email must be unique in the application.
 
+error.entityNotFound.player.id.code = 1007
+error.entityNotFound.player.id.message = There is no player with id={0}.
+error.entityNotFound.player.id.developerInfo = The requested player does not exist.
+
+error.duplicatedProperty.player.name.code = 1008
+error.duplicatedProperty.player.name.message = Player {0} already exists.
+error.duplicatedProperty.player.name.developerInfo = There is another player with the same name. The name of a player must be unique.
+
