--- a/src/main/resources/i18n/errors.properties
+++ b/src/main/resources/i18n/errors.properties
@@ -34,3 +34,10 @@ error.duplicatedProperty.player.name.code = 1008
 error.duplicatedProperty.player.name.message = Player {0} already exists.
 error.duplicatedProperty.player.name.developerInfo = There is another player with the same name. The name of a player must be unique.
 
+error.entityNotFound.category.id.code = 1009
+error.entityNotFound.category.id.message = There is no category with id={0}.
+error.entityNotFound.category.id.developerInfo = The requested category does not exist.
+
+error.duplicatedProperty.category.name.code = 1010
+error.duplicatedProperty.category.name.message = Category {0} already exists.
+error.duplicatedProperty.category.name.developerInfo = There is another category with the same name. The name of a category must be unique.
