Implemented validator for max age in Category.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,3 +2,4 @@ exception.duplicatedClubAcronymException.message = The acronym {0} is in use by 
 
 # Custom validation messages.
 Pattern.clubDto.acronym = size must be between 3 and 5 characters and must be formed by letters (a-z, A-Z) and numbers (0-9)
+MaxAgeGreaterThanMinAge.categoryDto.maxAge = Maximum age has to be greater or equal than minimum age.
