--- a/src/main/resources/i18n/errors.properties
+++ b/src/main/resources/i18n/errors.properties
@@ -2,6 +2,21 @@
 error.club.server.baseError = 1000
 
 # Error messages
+error.entityNotFound.season.id.code = 1001
+error.entityNotFound.season.id.message = There is no season with id={0}.
+error.entityNotFound.season.id.developerInfo = The requested season does not exist.
+
+error.entityNotFound.season.current.code = 1002
+error.entityNotFound.season.current.message = There is no current season.
+error.entityNotFound.season.current.developerInfo = The requested season does not exist.
+
+error.duplicatedProperty.season.year.code = 1002
+error.duplicatedProperty.season.year.message = There is a season already defined for year {0}.
+error.duplicatedProperty.season.year.developerInfo = There can only exist one season per year.
+
+
+
+
 error.duplicatedProperty.club.acronym.code = 1001
 error.duplicatedProperty.club.acronym.message = The acronym {0} is in use by another club.
 error.duplicatedProperty.club.acronym.developerInfo = The selected acronym is in use by another club. The acronym must be unique in the application.
