Partially adapted to new superclasses.

--- a/src/main/resources/i18n/errors.properties
+++ b/src/main/resources/i18n/errors.properties
@@ -10,6 +10,10 @@ error.entityNotFound.season.current.code = 1002
 error.entityNotFound.season.current.message = There is no current season.
 error.entityNotFound.season.current.developerInfo = The requested season does not exist.
 
-error.duplicatedProperty.season.year.code = 1003
+#error.duplicatedProperty.season.year.code = 1003
 error.duplicatedProperty.season.year.message = There is a season already defined for year {0}.
-error.duplicatedProperty.season.year.developerInfo = There can only exist one season per year.
+#error.duplicatedProperty.season.year.developerInfo = There can only exist one season per year.
+
+error.duplicatedProperty.season.code = 1003
+error.duplicatedProperty.season.message = There is a season already defined for year {0}.
+error.duplicatedProperty.season.developerInfo = There can only exist one season per year.
