Adapted to new methods from superclasses.

--- a/src/main/resources/i18n/errors.properties
+++ b/src/main/resources/i18n/errors.properties
@@ -2,18 +2,18 @@
 error.club.server.baseError = 1000
 
 # Error messages
-error.entityNotFound.season.id.code = 1001
-error.entityNotFound.season.id.message = There is no season with id={0}.
-error.entityNotFound.season.id.developerInfo = The requested season does not exist.
+error.entityNotFound.Season.id.code = 10001001
+error.entityNotFound.Season.id.message = There is no season with id={0}.
+error.entityNotFound.Season.id.developerInfo = The requested season does not exist.
 
-error.entityNotFound.season.current.code = 1002
-error.entityNotFound.season.current.message = There is no current season.
-error.entityNotFound.season.current.developerInfo = The requested season does not exist.
+error.entityNotFound.Season.current.code = 10001002
+error.entityNotFound.Season.current.message = There is no current season.
+error.entityNotFound.Season.current.developerInfo = The requested season does not exist.
 
 #error.duplicatedProperty.season.year.code = 1003
-error.duplicatedProperty.season.year.message = There is a season already defined for year {0}.
+error.duplicatedProperty.Season.year.message = This season has duplicated properties.
 #error.duplicatedProperty.season.year.developerInfo = There can only exist one season per year.
 
-error.duplicatedProperty.season.code = 1003
-error.duplicatedProperty.season.message = There is a season already defined for year {0}.
-error.duplicatedProperty.season.developerInfo = There can only exist one season per year.
+error.duplicatedProperty.Season.code = 10001003
+error.duplicatedProperty.Season.message = There is a season already defined for year {0}.
+error.duplicatedProperty.Season.developerInfo = There can only exist one season per year.
